c/examples/writing-a-c-compiler-tests/tests/chapter_14/invalid_types/extra_credit/bitwise_compound_assign_to_pointer.c
// No bitwise operations on pointers, including bitwise compound assignment
int main(void) {
    int x = 0;
    int *ptr = &x;
    ptr &= 0;
    return 0;
}